--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2013-08-01 Version 0.1.9
+    * fix whitespace handling issue with mod_type
+
 2013-07-02 Version 0.1.8
     * Improved question image conversion by putting it in its own p tag
 		* Added support for hsuforum content
