--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2013-08-15 Version 0.1.10
+    * improve multiple dropdown question handling
+
 2013-08-01 Version 0.1.9
     * fix whitespace handling issue with mod_type
 
