--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2014-04-03 Version 0.2.2
+    * Fixed parse exception for quizzes with no configures attempt count
+
 2014-04-02 Version 0.2.1
     * Fixed true/false questions conversion for moodle 2
 
