--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2014-04-09 Version 0.2.4
+    * Fix Moodle book conversion for titles and order
+
 2014-04-09 Version 0.2.3
     * Add converting of HSU forums
 
