--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2014-05-27 Version 0.2.8
+  * Improve handling of missing and external file references
+
 2014-05-09 Version 0.2.7
   * Convert File path tokens in questions and answers
   * Improve assignment gradint_type conversion
