--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2014-06-19 Version 0.2.10
+  * Require students to post before viewing converted Q & A forums
+  * Convert multiple attempts settings from feedback activites
+
 2014-06-05 Version 0.2.9
   * Minor fixes for multi-answer and html conversion
 
