--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2015-03-04 Version 0.2.17
+  * Add grading information to discussion topics
+
 2014-09-17 Version 0.2.16
   * Add choices to yes/no questionnaire questions
 
