--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2015-04-13 Version 0.2.18
+  * Improve invalid URL handling
+
 2015-03-04 Version 0.2.17
   * Add grading information to discussion topics
 
