--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2015-07-24 Version 0.2.22
+  * Fix question point conversion for Moodle 2
+  * Fix assignment importing for Moodle 2.1
+
 2015-06-10 Version 0.2.21
   * Add question point conversion for Moodle 2
 
