--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2015-08-04 Version 0.2.25
+  * Changes happymapper dependency
+
 2015-07-31 Version 0.2.24
   * Fix question bank and quiz question reference collisions
 
