--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2015-09-23 Version 0.2.26
+  * Handles duplicated ids better in Moodle 2 packages
+
 2015-08-04 Version 0.2.25
   * Changes happymapper dependency
 
