--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2015-11-18 Version 0.2.28
+  * Fixes module item reference resolution caused by 0.2.26
+  * Also distinguishes Announcement type discussion topics
+
 2015-10-21 Version 0.2.27
   * Handles duplicated wiki names better in Moodle 2 packages
 
