--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2016-03-24 Version 0.2.30
+  * Stop packaging tests in the built gem
+
 2016-03-16 Version 0.2.29
   * Imports LTI links as Canvas External Tool module items
   * Uses the first section label as a module name if needed
