--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2016-06-07 Version 0.2.33
+  * Minor fix for assignments with long titles
+
 2016-05-17 Version 0.2.32
   * Import LTI Assignments for Moodle 2
 
