--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2016-07-12 Version 0.2.34
+  * Fix for html in matching questions
+
 2016-06-07 Version 0.2.33
   * Minor fix for assignments with long titles
 
