--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2016-07-28 Version 0.2.35
+  * Minor fix for decimal assignment grade values
+
 2016-07-12 Version 0.2.34
   * Fix for html in matching questions
 
