--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2016-09-22 Version 0.2.36
+  * Fix for importing duplicated files
+
 2016-07-28 Version 0.2.35
   * Minor fix for decimal assignment grade values
 
