--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2017-10-27 Version 0.2.39
+  * Fix module item creation from books
+
 2017-05-18 Version 0.2.38
   * Work better with special characters in plain text
 
