--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2018-05-09 Version 0.2.40
+  * Fix conversion with missing mod instances
+
 2017-10-27 Version 0.2.39
   * Fix module item creation from books
 
