--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2018-05-11 Version 0.2.41
+  * Fix canvas conversion with missing mod instances
+
 2018-05-09 Version 0.2.40
   * Fix conversion with missing mod instances
 
