--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2023-10-23 Version 0.2.42
+  * Handle null values for forum ids
+
 2018-05-11 Version 0.2.41
   * Fix canvas conversion with missing mod instances
 
