--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2024-01-17 Version 0.2.43
+  * Handle 4.1 question to quiz mapping
+
 2023-10-23 Version 0.2.42
   * Handle null values for forum ids
 
