--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2024-01-29 Version 0.2.44
+  * Have random question types have separate identifiers to the originals
+
 2024-01-17 Version 0.2.43
   * Handle 4.1 question to quiz mapping
 
