--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2024-04-04 Version 0.2.46
+  * Fix duplicate question parse issue
+
 2024-03-26 Version 0.2.45
   * Remove deprecated usage of File.exists?
 
